<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/osm_map_dropoff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:tag="osm_map">

    <org.osmdroid.views.MapView
        android:id="@+id/mapview"
        tilesource="Mapnik"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >
    </org.osmdroid.views.MapView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="320sp"
        android:layout_height="55sp"
        android:background="@drawable/curved_corner_rectangle"
        android:hint="@string/dropoff_loc"
        android:paddingStart="55sp"
        android:paddingLeft="55sp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="320sp"
        android:layout_height="55sp"
        android:background="@drawable/curved_corner_rectangle"
        android:hint="@string/end_time"
        android:onClick="chooseTime"
        android:paddingStart="55sp"
        android:paddingLeft="55sp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/button"
        android:layout_width="320sp"
        android:layout_height="50sp"
        android:background="@drawable/theme_rectangle"
        android:onClick="confirmDropoff"
        android:text="@string/confirm_dropoff"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="0.548"
        app:srcCompat="@drawable/search_icon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="26dp"
        android:layout_height="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/clock_icon" />

    <Button
        android:id="@+id/Mon"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_selected"
        android:text="M"
        android:textColor="@color/white"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/Tues"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_selected"
        android:text="TU"
        android:textColor="@color/white"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/fri"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_selected"
        android:text="F"
        android:textColor="@color/white"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/sun"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_unselected"
        android:text="SU"
        android:textColor="@color/theme1"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/sat"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_unselected"
        android:text="SA"
        android:textColor="@color/theme1"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/Wed"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_selected"
        android:text="W"
        android:textColor="@color/white"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/Thurs"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/day_button_selected"
        android:text="TH"
        android:textColor="@color/white"
        android:onClick="dayToggle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.031" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="317dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@drawable/white_rect" />

    <RadioGroup
        android:layout_width="283dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="139dp"
            android:layout_height="38dp"
            android:buttonTint="@color/theme1"
            android:text="One Way"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/radioButton2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="1.0" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="138dp"
            android:layout_height="37dp"
            android:buttonTint="@color/theme1"
            android:text="Two Way"
            android:textSize="17sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>